--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . /app
 EXPOSE 8000
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "3", "--timeout", "120", "--preload", "config.wsgi:application"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
