--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
+chromadb==1.0.20
 django==5.2.5
 djangorestframework==3.16.1
 django-cors-headers==4.7.0
 model-bakery==1.20.5
 openai==1.101.0
 psycopg[binary]==3.2.1
+tiktoken==0.11.0
