--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,4 +6,4 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . /app
 EXPOSE 8000
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py migrate && python manage.py load_chroma_data && python manage.py runserver 0.0.0.0:8000"]
